# sonata

./: Cargo.toml  LICENSE  README.md  generate-openapi.sh
auto-async-send-sync/: Cargo.toml
auto-async-send-sync/src/: lib.rs
sonata-openapi/: Cargo.toml  README.md
sonata-openapi/.openapi-generator/: FILES
sonata-openapi/src/: lib.rs  models.rs
sonata-openapi/src/apis/: addition_clarification_extension_media_retrieval.rs  addition_extension_system.rs  addition_system.rs  bookmarks.rs  bookmarks_change.rs  browsing.rs  chat.rs  clarification_searching.rs  extension_media_retrieval.rs  extension_podcast.rs  internet_radio.rs  jukebox.rs  lists.rs  media_annotation.rs  media_library_scanning.rs  media_retrieval.rs  mod.rs  playlists.rs  podcast.rs  searching.rs  sharing.rs  system.rs  user_management.rs
sonata-openapi/src/server/: mod.rs
sonata-server/: Cargo.toml  README.md
sonata-server/src/: main.rs
sonata-server/src/server/: addition_clarification_extension_media_retrieval.rs  addition_extension_system.rs  addition_system.rs  bookmarks.rs  bookmarks_change.rs  browsing.rs  chat.rs  clarification_searching.rs  extension_media_retrieval.rs  extension_podcast.rs  internet_radio.rs  jukebox.rs  lists.rs  media_annotation.rs  media_library_scanning.rs  media_retrieval.rs  mod.rs  playlists.rs  podcast.rs  searching.rs  sharing.rs  system.rs  user_management.rs
