[package]
name = "sonata-server"
description = "A music server designed to take advantage of Musicbrainz tagging."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sonata-openapi.workspace = true
thiserror.workspace = true
displaydoc.workspace = true
error-stack.workspace = true
axum.workspace = true
axum-extra.workspace = true
http.workspace = true
bytes.workspace = true

[lints]
workspace = true
